[package]
name = "mt-mdb-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
mikrotik-rs = "0.3.1"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-loki = "0.2.5"
tracing-subscriber = "0.3.18"

[patch.crates-io]
mikrotik-rs = { path = "mikrotik-rs" }
